k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-ng
  name: test-ng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-ng
  template:
    metadata:
      labels:
        app: test-ng
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/ms-pipelines/test-ng
          imagePullPolicy: Always
          name: test-ng
          ports:
            - containerPort: 8080
              protocol: TCP
