k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
  labels:
    app: test-ng
  name: test-ng
  namespace: ms-pipelines
spec:
  host: test-ng-ms-pipelines.apps.unilong.azureuni.tses.gr
  port:
    targetPort: 8080
  to:
    kind: Service
    name: test-ng
    weight: 100
  wildcardPolicy: None
